--- a/package.json
+++ b/package.json
@@ -10,25 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@tanstack/react-query": "^5.85.3",
     "aos": "^2.3.4",
-    "axios": "^1.7.9",
+    "axios": "^1.11.0",
     "chart.js": "^4.4.2",
     "framer-motion": "^12.4.10",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-unity-webgl": "^9.8.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.162.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.162.0",
